--- a/static/css/mhsstyles.css
+++ b/static/css/mhsstyles.css
@@ -4,6 +4,10 @@
   letter-spacing: 2px;
   font-weight: bold;
 }
+.site-title a,.site-title a:hover{
+  text-decoration:none;
+  color:#404040;
+}
 .search-div{
   margin:5px 0;
 }
