--- a/static/css/mhsstyles.css
+++ b/static/css/mhsstyles.css
@@ -1,3 +1,11 @@
+.adc div.btn-group{
+  display:block;
+}
+.adc div label.btn{
+float:left;
+width:32.7%;
+display:block;
+}
 .site-title{
   font-family: helvetica nevue;
   text-shadow:  2px 2px rgba(0, 0, 0, 0.15);
