--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,7 +35,7 @@ DIV.section-inner {
 	PADDING-BOTTOM: 0px; MARGIN: 0px auto; PADDING-LEFT: 25px; PADDING-RIGHT: 25px; MAX-WIDTH: 1100px; PADDING-TOP: 0px;
 }
 DIV.body-wrap {
-	PADDING-BOTTOM: 4px; BACKGROUND-COLOR: #F3F3F3;/*#e9e9e9;*/ PADDING-LEFT: 0px; PADDING-RIGHT: 0px; PADDING-TOP: 0px
+	PADDING-BOTTOM: 4px; BACKGROUND-COLOR: #FFF;/*#F3F3F3;#e9e9e9;*/ PADDING-LEFT: 0px; PADDING-RIGHT: 0px; PADDING-TOP: 0px
 }
 DIV.custom_nav {
 	BACKGROUND-COLOR: #404040;
@@ -110,4 +110,207 @@ DIV.custom_nav UL LI:hover a {
 .nopadding {
    padding: 0 !important;
    /*margin: 0 !important;*/
+}
+
+
+/*MHS Styles*/
+
+.adc{
+  padding:10px;
+  font-weight:normal;
+  
+}
+.adc div.btn-group{
+  display:block;
+}
+
+.adc div label.btn{
+  float:left;
+  width:32.7%;
+  display:block;
+}
+.site-title{
+  font-family: helvetica nevue;
+  text-shadow:  2px 2px rgba(0, 0, 0, 0.15);
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+.site-title a,.site-title a:hover{
+  text-decoration:none;
+  color:#404040;
+}
+.search-div{
+  margin:5px 0;
+}
+.widget-item{
+  margin: 0 auto;
+  width:200px;
+  height:50px;
+}
+.widget-item-small{
+  margin: 0 auto;
+  width:100%;
+  height:50px;
+}
+.widget-item img,.widget-item-small img{
+  width:100%;
+  height:100%;
+}
+.store-inner{
+  text-align: center;
+  border: 2px solid #eee;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+ 	-moz-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow:2px 2px 4px rgba(0, 0, 0, 0.15);
+}
+.store-inner:hover{
+   -webkit-box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+ 	-moz-box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+ 	box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+}
+.nav-sidebar li a:hover{
+  background-color:#fff;
+  border-left:5px solid rgb(52,173,186);
+  border-right:5px solid rgb(52,173,186);
+}
+.nav-sidebar li a:active{
+  background-color:#fff;
+}
+.nav-sidebar li a:focus{
+  background-color:#fff;
+}
+.nav-sidebar li a{
+  border-bottom:1px solid #EEE;
+  text-align:center;
+}
+
+.item,.store-item{
+  padding-left:0;
+  color: #476380;
+  margin-bottom: 15px;
+}
+
+.item-inner{
+  border-left: 6px solid rgb(52,173,186);
+  padding: 3px 2px 5px 2px;
+  border-right: 1px solid #EEE;
+  border-top: 1px solid #EEE;
+  border-bottom: 1px solid #EEE;
+  background-color: #FFF;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+ 	-moz-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow:2px 2px 4px rgba(0, 0, 0, 0.15);
+}
+.item-inner:hover {
+  -webkit-box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+ 	-moz-box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+ 	box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+}
+.item:hover .item-left .item-right{
+  color:#fff;
+}
+.item-inner:hover{
+  border-left: 6px solid #5B83AD;
+  /*#787878;*/
+}
+
+.item-button{
+  text-align:center;
+}
+
+.item-button a{
+  width:170px;
+  font-weight:bold;
+  text-transform:uppercase;
+  letter-spacing:1px;
+}
+.item-title {
+  /*font-weight:bold;*/
+  text-align: center;
+  padding-bottom: 8px;
+  padding-top:8px;
+}
+.item-title h4{
+  font-weight:bold;
+}
+
+.item-inner p{
+  padding-left:5px;
+  height: 43px;
+  overflow: hidden;
+}
+.item-footer {
+  padding-bottom: 10px;
+  font-weight: normal;
+  color: #656565;
+}
+.item-footer span:first-child {
+  color: #444;
+  font-weight: bold;
+}
+.item-left {
+  padding-left: 2px;
+  text-align: left;
+  width: 48%;
+  float: left;
+}
+
+.item-right {
+  padding-right: 4px;
+  text-align: right;
+  width: 48%;
+  float: right;
+}
+.item-header{
+  width:149px;
+  height:38px;
+}
+.item-header img{
+  width:100%;
+  HEIGHT:100%;
+}
+.sidebar{
+  margin:0 auto;
+  border:1px solid #aaa;
+  padding:10px;
+  background-color:#fff;
+}
+.sidebar-header{
+  text-align:center;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 5px 0px;
+}
+
+.list-group-item div{
+  width:140px;
+  height: 48px;
+}
+.list-group-item div img{
+  width:100%;
+}
+
+.list-group{
+  background-color: #fff;
+}
+
+.list-group ul{
+  border: 2px solid #eee;
+  margin-bottom: 10px;
+}
+
+#modal-title{
+  text-align: center;
+}
+
+#coupon-code{
+  display:inline-block;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  border: 2px dashed brown;
+  background-color: #eee;
+  margin: 0 auto;
+  border-radius: 2px;
+  padding:2px 5px;
 }
