--- a/static/css/mhsstyles.css
+++ b/static/css/mhsstyles.css
@@ -1,10 +1,16 @@
+.adc{
+  padding:10px;
+  font-weight:normal;
+  
+}
 .adc div.btn-group{
   display:block;
 }
+
 .adc div label.btn{
-float:left;
-width:32.7%;
-display:block;
+  float:left;
+  width:32.7%;
+  display:block;
 }
 .site-title{
   font-family: helvetica nevue;
@@ -24,9 +30,26 @@ display:block;
   width:200px;
   height:50px;
 }
-.widget-item img{
+.widget-item-small{
+  margin: 0 auto;
+  width:100%;
+  height:50px;
+}
+.widget-item img,.widget-item-small img{
   width:100%;
   height:100%;
+}
+.store-inner{
+  text-align: center;
+  border: 2px solid #eee;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+ 	-moz-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow:2px 2px 4px rgba(0, 0, 0, 0.15);
+}
+.store-inner:hover{
+   -webkit-box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+ 	-moz-box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
+ 	box-shadow: 10px 10px 6px -6px rgba(0, 0, 0, 0.25);
 }
 .nav-sidebar li a:hover{
   background-color:#fff;
@@ -44,7 +67,7 @@ display:block;
   text-align:center;
 }
 
-.item{
+.item,.store-item{
   padding-left:0;
   color: #476380;
   margin-bottom: 15px;
